fix card width on mobile

--- a/pages/Home.module.css
+++ b/pages/Home.module.css
@@ -70,6 +70,7 @@
   align-items: center;
   flex-direction: column;
   flex: 1;
+  align-self: stretch;
 }
 
 @media all and (min-width: 901px) {
